kubernetes/daemonset.yml
kind: DaemonSet
apiVersion: apps/v1
metadata:
  name: nginx-daemonset
  namespace: nginx-ns
spec: 
  selector:
    matchLabels:
      app: nginx

  template:
    metadata:
      name: nginx-pod
      labels:
        app: nginx

    spec:
      containers:
      - name: nginx-cont
        image: nginx:latest
        ports:
        - containerPort: 80
