kubernetes/pod.yml
kind: Pod
apiVersion: v1
metadata:
  name: nginx-pod
  namespace: nginx-ns

spec:
  containers:
  - name: nginx-cont
    image: nginx:latest
    ports:
    - containerPort: 80
